--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ document.write(a);
 <br>
  
 
-<a class="footerbtn" href="whatsapp://send?text=https://raushang4.github.io/rakhi-surprise/" data-action="share/whatsapp/share">
+<a class="footerbtn" href="whatsapp://send?text= https://raushang4.github.io/BRO-SIS/" data-action="share/whatsapp/share">
 
 <img width="25px" height="25px" src="https://bit.ly/39V1fKA">
 <strong style="font-size: 15px;"> Click Here to Share on Whatsapp</strong>
